# lavadero

./: package-lock.json  package.json  vite.config.js
src/: WebSpeechApi.js  agent.js  index.html  main.js  opcionesLavado.js  supabase.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/css/: style.css
src/data/: servicios.json
src/modulos/: PinPadPayment.java  pago.js
src/utils/: utils.js
