[package]
name = "lavadero"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lavadero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
genpdf = { version = "0.2.0-alpha.1" }
winapi = { version = "0.3", features = ["winspool"] }
uuid = { version = "1", features = ["v4"] }
printers = "2.1.2"
escpos = { version = "0.15.0", features = ["full", "native_usb", "usb", "serial_port"] }
rusb = "0.9"
thermal-print = "0.2"
tauri-plugin-printer = { git = "https://github.com/catfo435/tauri-plugin-printer", branch = "main" }
once_cell = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serialport = "4"
base64 = "0.21"
chrono = "0.4"

